test_inputs/good/nested_loop_phi.lat
void looops(int a) {
    int i = 0;

    while (i < 2) {
        printInt(a + i);

        int j = 0;
        while (j < 2) {
            printInt(a + i + j);
            j++;
        }

        i++;
    }
}

int main() {
    looops(1);
    return 0;
}