test_inputs/bad/error_takes_no_arguments.lat
int main() {
    error("invalid");
    return 0;
}
